load("@rules_dotnet//dotnet:defs.bzl", "csharp_library", "csharp_nunit_test")
load("//:config.bzl", "assembly_version", "author", "nuget_version", "version")
load("//tools/build:assembly_info.bzl", "csharp_assembly_info")
load("//tools/build:client_test.bzl", "client_test")
load("//tools/build:nuget.bzl", "nuget_package")
load("//tools/build:pkg.bzl", "pkg_zip")
load("//tools/krpctools:clientgen.bzl", "clientgen_csharp")

exports_files(["CHANGES.txt"])

pkg_zip(
    name = "csharp",
    out = "krpc-csharp-%s.zip" % version,
    exclude = ["*.mdb"],
    files = [
        "CHANGES.txt",
        "LICENSE",
        ":KRPC.Client",
        "//:COPYING",
        "//:COPYING.LESSER",
        "//:readme",
        "//:version",
    ],
    path_map = {
        "client/csharp/KRPC.Client/net472/KRPC.Client.dll": "net472/KRPC.Client.dll",
        "client/csharp/KRPC.Client/net472/KRPC.Client.xml": "net472/KRPC.Client.xml",
        "client/csharp/": "",
    },
    visibility = ["//visibility:public"],
)

nuget_package(
    name = "nuget",
    assembly = ":KRPC.Client",
    author = author,
    description = "C# client for kRPC",
    framework = "net472",
    id = "KRPC.Client",
    license = "LGPL-3.0-only",
    project_url = "https://github.com/krpc/krpc",
    version = nuget_version,
    deps = {
        "Google.Protobuf": "3.22.0",
    },
)

csharp_assembly_info(
    name = "AssemblyInfo",
    cls_compliant = False,
    copyright = author,
    description = "C# client for kRPC",
    title = "KRPC.Client",
    version = assembly_version,
    visibility = [
        "//:__pkg__",  # Make visible to //:csproj-deps so it can copy AssemblyInfo.cs to generated_deps
    ],
)

srcs = glob(["src/**/*.cs"]) + [
    ":AssemblyInfo",
    "//protobuf:csharp",
    ":services-krpc",
    ":services-spacecenter",
    ":services-drawing",
    ":services-infernalrobotics",
    ":services-kerbalalarmclock",
    ":services-remotetech",
    ":services-ui",
    ":services-lidar",
    ":services-dockingcamera",
]

deps = [
    "//tools/build/dotnet:Google.Protobuf.net45",
    "//tools/build/dotnet:System.Memory",
    "//tools/build/dotnet:System.Runtime.CompilerServices.Unsafe",
]

csharp_library(
    name = "KRPC.Client",
    srcs = srcs,
    internals_visible_to = ["KRPC.Client.Test"],
    # CS1702: Google.Protobuf references an older System.Memory than the one
    # supplied; assembly unification handles this at runtime (MSBuild
    # suppresses this warning by default)
    nowarn = [
        "CS1685",
        "CS1702",
    ],
    target_frameworks = ["net472"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = deps,
)

# net8.0 build of the client, for the unit tests. A separate target rather
# than a multi-targeted KRPC.Client so that the default build flavor staged
# into the client zip and nupkg stays net472.
csharp_library(
    name = "KRPC.Client.net8",
    srcs = srcs,
    out = "KRPC.Client",
    internals_visible_to = ["KRPC.Client.Test"],
    # CS1701: Google.Protobuf's net5.0 build references net5-era framework
    # assemblies; unification handles this at runtime (MSBuild suppresses
    # this warning by default)
    nowarn = [
        "CS1685",
        "CS1701",
    ],
    target_frameworks = ["net8.0"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = ["//tools/build/dotnet:Google.Protobuf"],
)

clientgen_csharp(
    name = "services-krpc",
    out = "Services/KRPC.cs",
    defs = "//core:ServiceDefinitions",
    service = "KRPC",
    visibility = [
        "//:__pkg__",
    ],
)

clientgen_csharp(
    name = "services-spacecenter",
    out = "Services/SpaceCenter.cs",
    defs = "//service/SpaceCenter:ServiceDefinitions",
    service = "SpaceCenter",
    visibility = [
        "//:__pkg__",
    ],
)

clientgen_csharp(
    name = "services-drawing",
    out = "Services/Drawing.cs",
    defs = "//service/Drawing:ServiceDefinitions",
    service = "Drawing",
)

clientgen_csharp(
    name = "services-infernalrobotics",
    out = "Services/InfernalRobotics.cs",
    defs = "//service/InfernalRobotics:ServiceDefinitions",
    service = "InfernalRobotics",
    visibility = [
        "//:__pkg__",
    ],
)

clientgen_csharp(
    name = "services-kerbalalarmclock",
    out = "Services/KerbalAlarmClock.cs",
    defs = "//service/KerbalAlarmClock:ServiceDefinitions",
    service = "KerbalAlarmClock",
    visibility = [
        "//:__pkg__",
    ],
)

clientgen_csharp(
    name = "services-remotetech",
    out = "Services/RemoteTech.cs",
    defs = "//service/RemoteTech:ServiceDefinitions",
    service = "RemoteTech",
)

clientgen_csharp(
    name = "services-ui",
    out = "Services/UI.cs",
    defs = "//service/UI:ServiceDefinitions",
    service = "UI",
)

clientgen_csharp(
    name = "services-lidar",
    out = "Services/LiDAR.cs",
    defs = "//service/LiDAR:ServiceDefinitions",
    service = "LiDAR",
)

clientgen_csharp(
    name = "services-dockingcamera",
    out = "Services/DockingCamera.cs",
    defs = "//service/DockingCamera:ServiceDefinitions",
    service = "DockingCamera",
)

test_suite(
    name = "test",
    tests = [
        ":client",
    ],
    visibility = ["//:__pkg__"],
)

client_test(
    name = "client",
    size = "medium",
    server_executable = "//tools/TestServer",
    tags = [
        "local",
        "requires-network",
    ],
    test_executable = ":test-KRPC.Client",
)

csharp_assembly_info(
    name = "TestAssemblyInfo",
    cls_compliant = False,
    copyright = author,
    title = "KRPC.Client.Test",
    version = assembly_version,
)

csharp_nunit_test(
    name = "test-KRPC.Client",
    size = "small",
    srcs = glob(["test/**/*.cs"]) + [":TestAssemblyInfo"] + [":services-testservice"],
    out = "KRPC.Client.Test",
    defines = ["CODE_ANALYSIS"],
    # CS1701: Google.Protobuf/Moq reference net5/6-era framework assemblies;
    # unification handles this at runtime (MSBuild suppresses this warning by
    # default). Matches the KRPC.Core targets.
    nowarn = [
        "CS1591",
        "CS1573",
        "CS1685",
        "CS1701",
    ],
    tags = ["requires-network"],
    target_frameworks = ["net8.0"],
    visibility = ["//:__pkg__"],
    deps = [
        ":KRPC.Client.net8",
        "//tools/build/dotnet:Castle.Core",
        "//tools/build/dotnet:Google.Protobuf",
        "//tools/build/dotnet:Moq",
    ],
)

clientgen_csharp(
    name = "services-testservice",
    out = "Services/TestService.cs",
    defs = "//tools/TestServer:ServiceDefinitions",
    service = "TestService",
    visibility = [
        "//:__pkg__",
    ],
)
