load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("//tools/build:python.bzl", "py_lint_test", "py_sdist", "py_test")
load("//tools/build:client_test.bzl", "client_test")
load("//tools/krpctools:clientgen.bzl", "clientgen_python")
load("//:config.bzl", "python_version", "version")

# Needed as clientgen depends on these files
genrule(
    name = "python_base",
    srcs = [":python-without-services"],
    outs = ["krpc-python-base-%s.zip" % version],
    cmd = 'cp "$<" "$@"',
    output_to_bindir = True,
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "protobuf",
    output_mappings = ["KRPC_pb2.py=protobuf/krpc_pb2.py"],
    outputs = ["KRPC_pb2.py"],
    plugins = ["@build_stack_rules_proto//plugin/builtin:python"],
    proto = "@krpc_core//protobuf:krpc_proto",
)

py_sdist(
    name = "python-without-services",
    out = "krpc-base-%s.zip" % version,
    files = [
        "CHANGES.txt",
        "LICENSE",
        "MANIFEST.in",
        "setup.py",
        ":protobuf",
        "//:COPYING",
        "//:COPYING.LESSER",
        "//:python_version",
        "//:readme",
        "//:version",
    ] + glob(["krpc/**/*"]),
    path_map = {
        "version.py": "krpc/version.py",
        "client/python/": "",
        "client/python/KRPC_pb2.py": "krpc/schema/KRPC_pb2.py",
    },
)

genrule(
    name = "python",
    srcs = [":python-pypi"],
    outs = ["krpc-python-%s.zip" % version],
    cmd = 'cp "$<" "$@"',
    output_to_bindir = True,
    visibility = ["//visibility:public"],
)

py_sdist(
    name = "python-pypi",
    out = "krpc-%s.zip" % version,
    files = [
        "CHANGES.txt",
        "LICENSE",
        "MANIFEST.in",
        "setup.py",
        ":protobuf",
        ":service_docking_camera",
        ":service_drawing",
        ":service_infernal_robotics",
        ":service_kerbal_alarm_clock",
        ":service_krpc",
        ":service_lidar",
        ":service_remote_tech",
        ":service_space_center",
        ":service_test_service",
        ":service_ui",
        "//:COPYING",
        "//:COPYING.LESSER",
        "//:python_version",
        "//:readme",
        "//:version",
    ] + glob(["krpc/**/*"]),
    path_map = {
        "version.py": "krpc/version.py",
        "client/python/": "",
        "client/python/KRPC_pb2.py": "krpc/schema/KRPC_pb2.py",
    },
)

clientgen_python(
    name = "service_krpc",
    out = "krpc/services/krpc.py",
    defs = "@krpc_core//core:service_definitions",
    service = "KRPC",
)

clientgen_python(
    name = "service_test_service",
    out = "krpc/services/testservice.py",
    defs = "@krpc_core//tools/test_server:service_definitions",
    service = "TestService",
)

clientgen_python(
    name = "service_space_center",
    out = "krpc/services/spacecenter.py",
    defs = "//service/space_center:service_definitions",
    service = "SpaceCenter",
)

clientgen_python(
    name = "service_drawing",
    out = "krpc/services/drawing.py",
    defs = "//service/drawing:service_definitions",
    service = "Drawing",
)

clientgen_python(
    name = "service_infernal_robotics",
    out = "krpc/services/infernalrobotics.py",
    defs = "//service/infernal_robotics:service_definitions",
    service = "InfernalRobotics",
)

clientgen_python(
    name = "service_kerbal_alarm_clock",
    out = "krpc/services/kerbalalarmclock.py",
    defs = "//service/kerbal_alarm_clock:service_definitions",
    service = "KerbalAlarmClock",
)

clientgen_python(
    name = "service_remote_tech",
    out = "krpc/services/remotetech.py",
    defs = "//service/remote_tech:service_definitions",
    service = "RemoteTech",
)

clientgen_python(
    name = "service_ui",
    out = "krpc/services/ui.py",
    defs = "//service/ui:service_definitions",
    service = "UI",
)

clientgen_python(
    name = "service_lidar",
    out = "krpc/services/lidar.py",
    defs = "//service/lidar:service_definitions",
    service = "LiDAR",
)

clientgen_python(
    name = "service_docking_camera",
    out = "krpc/services/dockingcamera.py",
    defs = "//service/docking_camera:service_definitions",
    service = "DockingCamera",
)

test_suite(
    name = "test",
    tests = [
        ":client",
        ":lint",
    ],
)

client_test(
    name = "client",
    size = "medium",
    server_executable = "@krpc_core//tools/test_server",
    tags = ["requires-network"],
    test_executable = ":clienttest",
)

deps = ["@python_protobuf//file"]

py_test(
    name = "clienttest",
    size = "small",
    src = ":python",
    pkg = "krpc-" + python_version,
    tags = ["requires-network"],
    deps = deps,
)

py_lint_test(
    name = "lint",
    size = "small",
    srcs = glob(["krpc/**/*"]),
    pkg = ":python",
    pkg_name = "krpc",
    pycodestyle_config = "pycodestyle.ini",
    pylint_config = "pylint.rc",
    deps = deps,
)
