load("@rules_python//python:defs.bzl", "py_library")
load("//:config.bzl", "python_version", "version")
load("//tools/build:client_test.bzl", "client_test")
load("//tools/build:python.bzl", "py_lint_test", "py_sdist", "py_test")
load("//tools/krpctools:clientgen.bzl", "clientgen_python")

exports_files(["CHANGES.txt"])

# The krpc package as an importable python library, for use by other python
# targets in this workspace (the sdists below are what is released)
py_library(
    name = "krpc_lib",
    srcs = [
        ":services-dockingcamera",
        ":services-drawing",
        ":services-infernalrobotics",
        ":services-kerbalalarmclock",
        ":services-krpc",
        ":services-lidar",
        ":services-remotetech",
        ":services-spacecenter",
        ":services-testservice",
        ":services-ui",
    ],
    visibility = ["//visibility:public"],
    deps = [":krpc_base_lib"],
)

# The krpc package without the generated service modules; clientgen (which
# generates those modules) depends on this, so this must not depend on
# clientgen's output
py_library(
    name = "krpc_base_lib",
    srcs = glob(["krpc/**/*.py"]) + [
        ":krpc-version-py",
        ":schema-py",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = ["@pypi//protobuf"],
)

genrule(
    name = "schema-py",
    srcs = ["//protobuf:python"],
    outs = ["krpc/schema/KRPC_pb2.py"],
    cmd = "for f in $(locations //protobuf:python); do case $$f in *KRPC_pb2.py) cp $$f $@;; esac; done",
)

genrule(
    name = "krpc-version-py",
    srcs = ["//:python_version"],
    outs = ["krpc/version.py"],
    cmd = 'cp "$<" "$@"',
)

# Needed as clientgen depends on these files
genrule(
    name = "python_base",
    srcs = [":python-without-services"],
    outs = ["krpc-python-base-%s.tar.gz" % version],
    cmd = 'cp "$<" "$@"',
    output_to_bindir = True,
    visibility = ["//visibility:public"],
)

py_sdist(
    name = "python-without-services",
    out = "krpc-base-%s.tar.gz" % version,
    files = [
        "CHANGES.txt",
        "LICENSE",
        "pyproject.toml",
        "//:COPYING",
        "//:COPYING.LESSER",
        "//:python_version",
        "//:readme",
        "//:version",
        "//protobuf:python",
    ] + glob(["krpc/**/*"]),
    path_map = {
        "version.py": "krpc/version.py",
        "client/python/": "",
        "protobuf/": "krpc/schema/",
    },
)

genrule(
    name = "python",
    srcs = [":python-pypi"],
    outs = ["krpc-python-%s.tar.gz" % version],
    cmd = 'cp "$<" "$@"',
    output_to_bindir = True,
    visibility = ["//visibility:public"],
)

py_sdist(
    name = "python-pypi",
    out = "krpc-%s.tar.gz" % version,
    files = [
        "CHANGES.txt",
        "LICENSE",
        "pyproject.toml",
        ":services-dockingcamera",
        ":services-drawing",
        ":services-infernalrobotics",
        ":services-kerbalalarmclock",
        ":services-krpc",
        ":services-lidar",
        ":services-remotetech",
        ":services-spacecenter",
        ":services-testservice",
        ":services-ui",
        "//:COPYING",
        "//:COPYING.LESSER",
        "//:python_version",
        "//:readme",
        "//:version",
        "//protobuf:python",
    ] + glob(["krpc/**/*"]),
    path_map = {
        "version.py": "krpc/version.py",
        "client/python/": "",
        "protobuf/": "krpc/schema/",
    },
)

clientgen_python(
    name = "services-krpc",
    out = "krpc/services/krpc.py",
    defs = "//core:ServiceDefinitions",
    service = "KRPC",
)

clientgen_python(
    name = "services-testservice",
    out = "krpc/services/testservice.py",
    defs = "//tools/TestServer:ServiceDefinitions",
    service = "TestService",
)

clientgen_python(
    name = "services-spacecenter",
    out = "krpc/services/spacecenter.py",
    defs = "//service/SpaceCenter:ServiceDefinitions",
    service = "SpaceCenter",
)

clientgen_python(
    name = "services-drawing",
    out = "krpc/services/drawing.py",
    defs = "//service/Drawing:ServiceDefinitions",
    service = "Drawing",
)

clientgen_python(
    name = "services-infernalrobotics",
    out = "krpc/services/infernalrobotics.py",
    defs = "//service/InfernalRobotics:ServiceDefinitions",
    service = "InfernalRobotics",
)

clientgen_python(
    name = "services-kerbalalarmclock",
    out = "krpc/services/kerbalalarmclock.py",
    defs = "//service/KerbalAlarmClock:ServiceDefinitions",
    service = "KerbalAlarmClock",
)

clientgen_python(
    name = "services-remotetech",
    out = "krpc/services/remotetech.py",
    defs = "//service/RemoteTech:ServiceDefinitions",
    service = "RemoteTech",
)

clientgen_python(
    name = "services-ui",
    out = "krpc/services/ui.py",
    defs = "//service/UI:ServiceDefinitions",
    service = "UI",
)

clientgen_python(
    name = "services-lidar",
    out = "krpc/services/lidar.py",
    defs = "//service/LiDAR:ServiceDefinitions",
    service = "LiDAR",
)

clientgen_python(
    name = "services-dockingcamera",
    out = "krpc/services/dockingcamera.py",
    defs = "//service/DockingCamera:ServiceDefinitions",
    service = "DockingCamera",
)

test_suite(
    name = "test",
    tests = [
        ":client",
        ":client_base",
        ":lint",
    ],
)

client_test(
    name = "client",
    size = "medium",
    server_executable = "//tools/TestServer",
    tags = ["requires-network"],
    test_executable = ":clienttest",
)

client_test(
    name = "client_base",
    size = "medium",
    server_executable = "//tools/TestServer",
    tags = ["requires-network"],
    test_executable = ":clienttest_base",
)

deps = ["@pypi//protobuf"]

py_test(
    name = "clienttest",
    size = "small",
    src = ":python",
    pkg = "krpc-" + python_version,
    tags = ["requires-network"],
    deps = deps,
)

py_test(
    name = "clienttest_base",
    size = "small",
    src = ":python_base",
    pkg = "krpc-" + python_version,
    tags = ["requires-network"],
    deps = deps,
)

py_lint_test(
    name = "lint",
    size = "medium",
    black_exclude = ".*(schema|services)/.+",
    pkg = ":python",
    pkg_name = "krpc",
    pylint_config = "pylint.rc",
    deps = deps,
)
