[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krpc"
dynamic = ["version"]
authors = [
    {name = "djungelorm", email = "djungelorm@users.noreply.github.com"},
]
description = "Client library for kRPC, a Remote Procedure Call server for Kerbal Space Program"
readme = "README.md"
license = "LGPL-3.0-only"
requires-python = ">=3.10"
dependencies = ["protobuf >= 7.35.1"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Topic :: Communications",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Internet",
]

[project.urls]
Homepage = "https://krpc.github.io/krpc"

[tool.hatch.version]
path = "krpc/version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "krpc/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "COPYING",
    "COPYING.LESSER",
    "VERSION.txt",
]

[tool.hatch.build.targets.wheel]
packages = ["krpc"]
